<resources>
    <string name="app_name">WeMeme</string>
    <string name="testText" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Phasellus finibus euismod est ut scelerisque. Aenean interdum turpis in
        quam condimentum ultricies. Nunc volutpat tempus metus eu lacinia. Sed
        ultrices, ante vitae porta rhoncus, velit tellus facilisis neque, in hendrerit
        felis ipsum congue justo. Fusce in neque vitae turpis pretium scelerisque.
        Vivamus tempor tincidunt eros, sit amet condimentum dui finibus non. Maecenas eget
        mauris ante. Aliquam diam nisl, commodo ac leo sit amet, imperdiet sodales dolor.
        Donec vel sagittis mi. Nulla facilisi. Cras id nulla faucibus, blandit ipsum in,
        gravida metus. Praesent non augue diam. Integer viverra aliquet orci ut suscipit.
        Nam pulvinar porta odio, et venenatis magna molestie vel.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Phasellus finibus euismod est ut scelerisque. Aenean interdum turpis in
        quam condimentum ultricies. Nunc volutpat tempus metus eu lacinia. Sed
        OK NON LA JEN AI MARRE TABARNAK CA BUG TROP POUR RIEN SERIEUXSMEENT ESTI
        LAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
        BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
        BBBBBBBBBBBBBBBBB
        CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
        DDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDd
        WWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW
        QQQQQQQQQQQQQQQQQQ
        VVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV
        MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
        OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
        SSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS
        ZZZZZZZZZZZZZZZZZ
        YYYYYYYYYYYYYYYYYYYYYYY
        RRRRRRRRRRRRRRRRRRRRRRRRRRRRRR
        NNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNN
        SSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS
        RRRRRRRRRRRRRRRRRRRRRRRRRRRRRR
        SSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS
        YYYYYYYYYYYYYYYYYYYYYYY
        YYYYYYYYYYYYYYYYYYYYYY
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="_0" translatable="false">0</string>
    <string name="fr" translatable="false">francais</string>
    <string name="id" translatable="false">ID</string>
    <string name="id_personne" translatable="false">Id_personne</string>
    <string name="likes">Likes</string>
    <string name="nom">Nom</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="followers">Followers</string>
    <string name="mot_de_passe_oubl">Mot de passe oublé ?</string>
    <string name="connexion">Connexion</string>
    <string name="cr_er_un_compte">Créer un compte</string>
    <string name="confirmer_mot_de_passe">Confirmer mot de passe</string>
    <string name="q">q</string>
    <string name="adresse_courriel">Adresse courriel</string>
    <string name="inscription">Inscription</string>
    <string name="justin">Justin</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="nom_de_memeur">Nom de memeur</string>
    <string name="divulgation_informations_confidentielles">Divulgation informations confidentielles</string>
    <string name="autre">Autre</string>
    <string name="envoyer">Envoyer</string>
    <string name="nudit">Nudité</string>
    <string name="pornograhpy">Pornograhpy</string>
</resources>
