<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
      >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="100"
            android:background="#171428">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="40"
                        android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView

                            android:id="@+id/circleImageView"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="20"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txt_id_user_post"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/id_personne"
                                android:textColor="@color/colorTexte"
                                android:visibility="invisible" />

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/textview"
                                android:visibility="invisible" />

                            <TextView
                                android:id="@+id/txt_ID"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/id"
                                android:textColor="@color/colorTexte"
                                android:visibility="invisible" />

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                android:visibility="invisible" />

                            <TextView
                                android:id="@+id/nom"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/nom"
                                android:textColor="@color/colorTexte" />

                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                android:visibility="invisible" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="40"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                android:visibility="invisible" />

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                android:visibility="invisible" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/imageView3"
                                    android:layout_width="wrap_content"
                                    android:layout_height="34dp"
                                    android:layout_weight="1"
                                    android:visibility="invisible"
                                    app:srcCompat="@drawable/troispoints" />

                                <ImageView
                                    android:id="@+id/iv_Option"
                                    android:layout_width="wrap_content"
                                    android:layout_height="49dp"
                                    android:layout_weight="0.34"
                                    app:srcCompat="@drawable/troispoints"
                                    android:contentDescription=""
                                    tools:ignore="ContentDescription"
                                    android:paddingTop="2dp"
                                    android:paddingBottom="2dp"
                                    android:paddingLeft="2dp"
                                     />


                            </LinearLayout>

                            <TextView
                                android:id="@+id/textView12"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="TextView" />

                            <TextView
                                android:id="@+id/textView15"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="TextView" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="60"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@color/cardview_light_background" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="15"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView18"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                android:visibility="invisible" />

                            <TextView
                                android:id="@+id/textView17"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                android:visibility="invisible" />

                            <TextView
                                android:id="@+id/textView9"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                android:visibility="invisible" />

                            <TextView
                                android:id="@+id/textView16"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="#Hashtag"
                                android:textAlignment="center"
                                android:textColor="@color/colorTexte"
                                tools:ignore="HardcodedText" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:weightSum="10">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="3"
                                android:orientation="horizontal">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/textView21"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="TextView"
                                        android:visibility="invisible" />

                                    <TextView
                                        android:id="@+id/txtlike"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/_0"
                                        android:textAlignment="textEnd"
                                        android:layout_gravity="end"
                                        android:textColor="@color/colorTexte" />

                                    <TextView
                                        android:id="@+id/textView19"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/likes"
                                        android:textAlignment="textEnd"
                                        android:layout_gravity="end"
                                        android:textColor="@color/colorTexte" />
                                </LinearLayout>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="7"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/imageView4"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    app:srcCompat="@drawable/nonelike"
                                    android:paddingRight="10dp"
                                    tools:ignore="RtlSymmetry" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:visibility="invisible"
                        android:paddingTop="6dp"/>

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimaryDark"
                        android:paddingTop="35dp"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>